--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jason's Personal Site</title>
+  <title>Jian Han's Portfolio</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+  <style>
+    body {
+      background-color: #F4DFD0;
+    }
+
+    hr {
+      #background-color: white;
+      border-style: dotted none none none;
+      border-width: 10px;
+      border-color: grey;
+      width: 20%;
+      height: 0px;
+    }
+
+  </style>
+
 </head>
 
 <body>
