--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <input type="email" name="yourEmail" value=""> <br><br>
     <label>Your Message:</label><br>
     <textarea name="yourMessage" rows="8" cols="20"></textarea><br>
-    <input type="submit" name="" > <br>
+    <input type="submit" name=""> <br>
   </form>
 </body>
 
