Import Google font CDN.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <title>Jian Han's Portfolio</title>
   <link rel="stylesheet" href="css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <table cellspacing="15">
     <tr>
-      <td><img src="images/prof pic.PNG" alt="Tey Jian Han's Picture" height="250"></td>
+      <td><img class="cropping" src="images/prof pic.PNG" alt="Tey Jian Han's Picture" height="250"></td>
       <td>
         <h1>Jason Tey Jian Han</h1>
         <p>Data Analyst with <strong>Strong Programming Skills</strong></p>
@@ -26,7 +27,7 @@
 
   <h3>Pervious Projects</h3>
   <ul>
-    <li>Song genre checker.</li>
+    <li class="font2">Song genre checker.</li>
     <li>Handwashing vs No-handwashing</li>
   </ul>
 
